# diffscreen-web

./: Cargo.toml  README.md
dscom/src/: lib.rs
dsweb-core/: Cargo.toml  build.rs
dsweb-core/src/: config.rs  convert.rs  ctrl_event.rs  http_server.rs  imop.rs  key_mouse.rs  main.rs  screen.rs  screen_stream.rs  server.rs
dsweb-front/: Cargo.toml  README.md  index.html  package-lock.json  package.json  webpack.config.js
dsweb-front/src/: bitmap.rs  convert.rs  lib.rs  main.js
lib/enigo/src/win/: win_impl.rs
