[package]
name = "dsweb-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dscom = {path = "../dscom"}
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-stream = "0.1"
warp = { version = "0.3", features = ["multipart", "websocket"]}

scrap = "0.5"
enigo = "0.1.2"
flate2 = "1.0"
clipboard = "0.5"
