[package]
name = "dsweb-core"
version = "0.0.2"
edition = "2023"

[dependencies]
dscom = {path = "../dscom"}
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-stream = "0.1"
warp = { version = "0.3", features = ["multipart", "websocket"]}
clap = { version = "4", features = ["derive"]}

scrap = "0.5"
enigo = "0.1.2"
flate2 = "1.0"
clipboard = "0.5"
