[package]
name = "dsweb-core"
version = "0.0.2"
edition = "2021"

build = "build.rs"

[dependencies]
dscom = {path = "../dscom"}
clap = { version = "4", features = ["derive"]}
rouille = "3.6.2"

scrap = "0.5"
enigo = {path = "../lib/enigo"}
flate2 = "1.0"
clipboard = "0.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
